-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======

0.5.1
========

- orm
    - Modernized the "no mapped table" exception and added a more
      explicit __table__/__tablename__ exception to declarative.

    - Concrete inheriting mappers now instrument attributes which
      are inherited from the superclass, but are not defined for
      the concrete mapper itself, with an InstrumentedAttribute that
      issues a descriptive error when accessed. [ticket:1237]

    - Added a new `relation()` keyword `back_populates`. This
      allows configuation of backreferences using explicit
      relations. [ticket:781] This is required when creating
      bidirectional relations between a hierarchy of concrete
      mappers and another class. [ticket:1237]

    - Test coverage added for `relation()` objects specified on
      concrete mappers. [ticket:1237]
    
    - Query.from_self() as well as query.subquery() both disable 
      the rendering of eager joins inside the subquery produced.
      The "disable all eager joins" feature is available publically
      via a new query.enable_eagerloads() generative. [ticket:1276]
      
    - Added a rudimental series of set operations to Query that
      receive Query objects as arguments, including union(),
      union_all(), intersect(), except_(), insertsect_all(),
      except_all().  See the API documentation for
      Query.union() for examples. 

    - Fixed bug that prevented Query.join() and eagerloads from 
      attaching to a query that selected from a union or aliased union.
      
    - A short documentation example added for bidirectional
      relations specified on concrete mappers. [ticket:1237]

    - Mappers now instrument class attributes upon construction
      with the final InstrumentedAttribute object which remains
      persistent. The `_CompileOnAttr`/`__getattribute__()`
      methodology has been removed. The net effect is that